<resources>
    <string name="app_name">Bible Quiz App</string>

    <!-- Username hint -->
    <string name="name_hint">Your name here</string>

    <!-- Question 8 and 9 hint -->
    <string name="answer_here">Write answer here</string>

    <!-- Finish button text -->
    <string name="finish">Finish</string>

    <!-- This is Credits-->
    <string name="creditsName">Created By: elvis anane</string>
    <string name="creditsEmail">ananekelvis92@gmail.com</string>

    <!-- This is Question 1 -->
    <string name="question1">1. What is the name of the first man God created?</string>

    <!-- This is Question 2 -->
    <string name="question2">2. The Bible contains ............ books.</string>

    <!-- This is Question 3 -->
    <string name="question3">3. What is the name of the first Book of the Bible?</string>

    <!-- This is Question 4 -->
    <string name="question4">4. What is the name of the last Book of the Bible?</string>

    <!-- This is Question 5 -->
    <string name="question5">5. What is the shortest verse in the Bible?</string>

    <!-- This is Question 6 -->
    <string name="question6">6. Which of the following are names of books in the Bible?</string>

    <!-- This is Question 7 -->
    <string name="question7">7. Which of the following were disciples of Jesus Christ?</string>

    <!-- This is Question 8 -->
    <string name="question8">8. Who wrote the Book of Revelations?</string>

    <!-- This is Question 9 -->
    <string name="question9">9. Who Killed Goliath?</string>

    <!-- This is Question 10 -->
    <string name="question10">10. Which of the following books were written by Paul, the Apostle</string>


    <!-- This is option 1A -->
    <string name="option1A">Abraham</string>

    <!-- This is option 1B -->
    <string name="option1B">Adam</string>

    <!-- This is option 1C -->
    <string name="option1C">Jesus</string>

    <!-- This is option 1D -->
    <string name="option1D">Noah</string>

    <!-- This is option 2A -->
    <string name="option2A">39</string>

    <!-- This is option 2B -->
    <string name="option2B">27</string>

    <!-- This is option 2C -->
    <string name="option2C">37</string>

    <!-- This is option 2D -->
    <string name="option2D">66</string>

    <!-- This is option 3A -->
    <string name="option3A">Revelation</string>

    <!-- This is option 3B -->
    <string name="option3B">Genesis</string>

    <!-- This is option 3C -->
    <string name="option3C">Malachi</string>

    <!-- This is option 3D -->
    <string name="option3D">Matthew</string>

    <!-- This is option 4A -->
    <string name="option4A">Revelation</string>

    <!-- This is option 4B -->
    <string name="option4B">Genesis</string>

    <!-- This is option 4C -->
    <string name="option4C">Malachi</string>

    <!-- This is option 4D -->
    <string name="option4D">Matthew</string>

    <!-- This is option 5A -->
    <string name="option5A">John 10:30</string>

    <!-- This is option 5B -->
    <string name="option5B">Genesis 1:1</string>

    <!-- This is option 5C -->
    <string name="option5C">John 1:1</string>

    <!-- This is option 5D -->
    <string name="option5D">John 11:35</string>

    <!-- This is option 6A -->
    <string name="option6A">Genesis, Habakkuk, Jonah, Zephaniah</string>

    <!-- This is option 6B -->
    <string name="option6B">Isaiah, Elijah, Joshua, 1 Samuel</string>

    <!-- This is option 6C -->
    <string name="option6C">Matthew, Mark, Luke, John</string>

    <!-- This is option 6D -->
    <string name="option6D">Revelation, Jude, Judas, Paul</string>

    <!-- This is option 7A -->
    <string name="option7A">Peter, Judas Iscariot and John</string>

    <!-- This is option 7B -->
    <string name="option7B">Andrew, Judas and James</string>

    <!-- This is option 7C -->
    <string name="option7C">Philip, Matthew and Mark</string>

    <!-- This is option 7D -->
    <string name="option7D">Simon the Zealot, Bartholomew, Thomas</string>

    <!-- This is option 10A -->
    <string name="option10A">I and II Corinthians</string>

    <!-- This is option 10B -->
    <string name="option10B">Colossians and Romans</string>

    <!-- This is option 10C -->
    <string name="option10C">Philemon and Galatians</string>

    <!-- This is option 10D -->
    <string name="option10D">I and II Timothy</string>

</resources>
