<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question1"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/opt_1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1A"/>

            <RadioButton
                android:id="@+id/opt_1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1B"/>

            <RadioButton
                android:id="@+id/opt_1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1C"/>

            <RadioButton
                android:id="@+id/opt_1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1D"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question2"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/opt_2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2A"/>

            <RadioButton
                android:id="@+id/opt_2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2B"/>

            <RadioButton
                android:id="@+id/opt_2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2C"/>

            <RadioButton
                android:id="@+id/opt_2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2D"/>

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question3"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/opt_3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3A"/>

            <RadioButton
                android:id="@+id/opt_3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3B"/>

            <RadioButton
                android:id="@+id/opt_3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3C"/>

            <RadioButton
                android:id="@+id/opt_3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3D"/>

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question4"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/opt_4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4A"/>

            <RadioButton
                android:id="@+id/opt_4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4B"/>

            <RadioButton
                android:id="@+id/opt_4C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4C"/>

            <RadioButton
                android:id="@+id/opt_4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4D"/>

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/question5"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RadioButton
                android:id="@+id/opt_5A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5A"/>

            <RadioButton
                android:id="@+id/opt_5B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5B"/>

            <RadioButton
                android:id="@+id/opt_5C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5C"/>

            <RadioButton
                android:id="@+id/opt_5D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5D"/>

        </RadioGroup>

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="displayScore"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

</ScrollView>